--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-    rel="stylesheet"
-    media="screen and (max-width: 768px)"
-    href="css/mobile.css"
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
     />
     <link
-    rel="stylesheet"
-    media="screen and (min-width: 1100px)"
-    href="css/widescreen.css"
+      rel="stylesheet"
+      media="screen and (min-width: 1100px)"
+      href="css/widescreen.css"
     />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/2d0ae63059.js"></script>
@@ -33,5 +33,18 @@
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
+    <!-- Header showcase -->
+    <header id="showcase">
+      <div class="showcase-content">
+        <h1 class="l-heading">
+          The Sky Is The Limit
+        </h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, sit
+          facilis. Aspernatur atque fuga modi?
+        </p>
+        <a href="#what" class="btn">Read More</a>
+      </div>
+    </header>
   </body>
 </html>
