--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <title>Edger Ledger</title>
   </head>
+
   <body>
     <!-- Navbar -->
     <nav id="navbar">
@@ -33,6 +34,7 @@
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
+
     <!-- Header showcase -->
     <header id="showcase">
       <div class="showcase-content">
@@ -46,6 +48,7 @@
         <a href="#what" class="btn">Read More</a>
       </div>
     </header>
+
     <!-- Section: What we do -->
     <section id="what" class="bg-light py-1">
       <div class="container">
@@ -60,23 +63,64 @@
             <i class="fas fa-university fa-2x"></i>
             <h3>Investment Banking</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, iusto.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Praesentium, iusto.
             </p>
           </div>
           <div class="item">
             <i class="fas fa-book-reader fa-2x"></i>
             <h3>Portfolio Management</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, dicta!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque,
+              dicta!
             </p>
           </div>
           <div class="item">
             <i class="fas fa-pencil-alt fa-2x"></i>
             <h3>Tax & Custodial</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, architecto.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Explicabo, architecto.
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Who We Are -->
+    <section id="who">
+      <div class="who-img"></div>
+      <div class="who-text bg-dark p-2">
+        <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+          excepturi quia, ullam possimus nulla molestiae, delectus, dicta
+          commodi cupiditate repudiandae debitis et maiores maxime tenetur
+          repellat vero. Quibusdam, nulla molestias.
+        </p>
+        <ul class="list">
+          <li>Mark Smith: CEO</li>
+          <li>Shannon Johnson: CFO</li>
+          <li>Janet Williams: Investment Manager</li>
+          <li>Kara Jackson: Senior Accountant</li>
+          <li>Patronella Cordena: Operations Manager</li>
+          <li>John Corbit: lead Accountant</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- section: Clients -->
+    <section id="clients" class="py-1">
+      <div class="container">
+        <h2 class="m-heading text-center">
+          <span class="text-primary">Our</span> Clients
+        </h2>
+        <div class="items">
+          <div><img src="./img/logos/logo1.png" alt="Client"></div>
+          <div><img src="./img/logos/logo2.png" alt="Client"></div>
+          <div><img src="./img/logos/logo3.png" alt="Client"></div>
+          <div><img src="./img/logos/logo4.png" alt="Client"></div>
+          <div><img src="./img/logos/logo5.png" alt="Client"></div>
         </div>
       </div>
     </section>
