--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
     <title>Edger Ledger</title>
   </head>
 
-  <body>
+  <body id="home">
     <!-- Navbar -->
     <nav id="navbar">
       <h1 class="logo">
-        <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>
-        ledger
+        <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
       </h1>
       <ul>
-        <li><a href="home">home</a></li>
+        <li><a href="#home">home</a></li>
         <li><a href="#what">what</a></li>
         <li><a href="#who">who</a></li>
         <li><a href="#contact">contact</a></li>
@@ -179,9 +178,16 @@
         <p>Copyright &copy; 2019, EdgeLedger, All rights reserved</p>
       </div>
     </footer>
+    <script
+      src="http://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Local JS file -->
     <script src="js/main.js"></script>
 
-    <!--Load the API from the specified URL
+    <!-- google Maps.
+      Load the API from the specified URL
     * The async attribute allows the browser to render the page while the API loads
     * The key parameter will contain your own API key (which is not needed for this tutorial)
     * The callback parameter executes the initMap() function
